[package]
name = "mcwpack"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive", "cargo"] }
console = "0.15"
edit = "0.1"
enum_dispatch = "0.3"
env_logger = "0.10"
fastanvil = "0.26"
fastnbt = "2.3"
flate2 = "1.0"
fs_extra = "1.2"
globset = "0.4"
ignore = "0.4"
indicatif = { version = "0.17", features = ["rayon"] }
inquire = { version = "0.6", default-features = false, features = ["console"] }
log = "0.4"
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
zip-extensions = "0.6"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
