[package]
name = "mcwpack"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = ["derive", "cargo"] }
console = "0.15"
edit = "0.1"
env_logger = { version = "0.10", default-features = false }
fastanvil = "0"
fastnbt = "2"
flate2 = "1.0"
globset = "0.4"
ignore = "0.4"
indicatif = { version = "0.17", features = ["rayon"] }
inquire = { version = "0.6", features = ["console"], default-features = false }
lazy_static = "1.4.0"
log = "0.4"
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
zip = { version = "0.6", features = ["deflate", "time"], default-features = false }

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
